演算子の連続入力阻止対策ver2

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="buttons">
 
-          <button class="button" onclick="num_click(this.innerHTML)">7</button>
+          <button class="button" onclick="num_click(this.innerHTML)" value="7">7</button>
           <button class="button" onclick="num_click(this.innerHTML)">8</button>
           <button class="button" onclick="num_click(this.innerHTML)">9</button>
           <button class="button ope_btn" onclick="ope_click(this.innerHTML)">+</button><br>
